优化更新接口

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,14 @@
             android:gravity="center"
             android:onClick="addList"
             android:text="addList" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="updateList"
+            android:text="updateList" />
         <Button
             android:id="@+id/remove_btn"
             android:layout_width="match_parent"
