--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <Button
@@ -25,6 +25,16 @@
             android:gravity="center"
             android:onClick="add"
             android:text="Add" />
+
+        <Button
+            android:id="@+id/remove_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="remove"
+            android:text="remove" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,14 +50,15 @@
             android:gravity="center"
             android:onClick="updateList"
             android:text="updateList" />
+
         <Button
-            android:id="@+id/remove_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="remove"
-            android:text="remove" />
+            android:onClick="updateContent"
+            android:text="updateContent" />
+
     </LinearLayout>
 
 
