--- a/app/src/main/res/menu/menu_main_setting.xml
+++ b/app/src/main/res/menu/menu_main_setting.xml
@@ -3,13 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/add"
-        android:orderInCategory="99"
-        android:title="Add"
+        android:orderInCategory="1"
+        android:title="Add New Screen"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/remove"
-        android:orderInCategory="100"
-        android:title="Remove"
+        android:orderInCategory="2"
+        android:title="Remove New Screen"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/add_info_btn"
+        android:orderInCategory="3"
+        android:title="Add InfoButton"
         app:showAsAction="never" />
 </menu>
