[优化] Update README.md

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string-array name="sensitivity_names">
-        <item>higher</item>
-        <item>high</item>
-        <item>normal</item>
+        <item>Higher</item>
+        <item>High</item>
+        <item>Normal</item>
     </string-array>
 
     <string-array name="sensitivity_values">
